# R-FORTH

./: CMakeLists.txt
RForth/: CMakeLists.txt  README.md  function.c  function.h  int_stack.c  int_stack.h  int_stack.hh  main.c  token.h  token_tests.cc
WarmUp_1/: CMakeLists.txt
WarmUp_10/: CMakeLists.txt  print_args.c
WarmUp_2/: CMakeLists.txt  Calculator.c
WarmUp_3/: CMakeLists.txt  arrayOperations.c
WarmUp_4/: CMakeLists.txt  StringReversal.c
WarmUp_5/: CMakeLists.txt  MatrixOperations.c
WarmUp_6/: CMakeLists.txt  Factorial.c
WarmUp_7/: LinearSearch.c
WarmUp_8/: LinkedList.c
WarmUp_9/: file_operations.c
tokens/: CMakeLists.txt  int_stack.c  int_stack.h  main.c  token.c  token.h  tokenTests.c
